# retico-speechbraintts

./: README.md  pyproject.toml  setup.py
retico_speechbraintts/: __init__.py  speechbraintts.py
