[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-speechbraintts"
dynamic = ["version"]
dependencies = [
    "numpy",
    "retico-core>=2.0.0",
    # this is a temporary stop-gap until speechbrain releases an updated PyPI package
    #    "speechbrain",
    "speechbrain @ git+https://github.com/speechbrain/speechbrain.git",
    # speechbrain hasn't yet updated for torch>=2.9
    "torch<2.9",
]
authors = [
    {name = "Thilo Michael", email="uhlomuhlo@gmail.com"},
]
description = "Local speechbrain speech synthesis for Retico."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["retico", "framework", "incremental", "dialogue", "dialog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

